--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
     "model" : {
-        "architecture":         "Full Yolo",
+        "architecture":         "Tiny Yolo",
         "input_size":           416,
-        "anchors":              [0.57273, 0.677385, 1.87446, 2.06253, 3.33843, 5.47434, 7.88282, 3.52778, 9.77052, 9.16828],
+        "anchors":              [2.07,2.32, 3.03,7.38, 5.53,10.14, 5.92,5.53, 9.53,9.37],
         "max_box_per_image":    10,        
-        "labels":               ["raccoon"]
+        "labels":               ["kangaroo"]
     },
 
     "train": {
-        "train_image_folder":   "/home/andy/github/raccoon_dataset/images/",
-        "train_annot_folder":   "/home/andy/github/raccoon_dataset/annotations/",     
+        "train_image_folder":   "/Users/kodlan/home/workspaces/tools/kangaroo/images/",
+        "train_annot_folder":   "/Users/kodlan/home/workspaces/tools/kangaroo/annots/",     
           
         "train_times":          10,
-        "pretrained_weights":   "full_yolo_raccoon.h5",
+        "pretrained_weights":   "/Users/kodlan/home/workspaces/tools/tiny-yolo.weights",
         "batch_size":           16,
         "learning_rate":        1e-4,
         "nb_epoch":             50,
@@ -23,7 +23,7 @@
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "full_yolo_raccoon.h5",
+        "saved_weights_name":   "yolo-trained-new.h5",
         "debug":                true
     },
 
